--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,13 @@
   "AllowedHosts": "*",
   "JWT": {
     "SecretSupperKey": "gC9pNO4KBa8bBo5K97wEFUqkP3761FDUDX5M7g3vlz4XhweJAq",
-    "Issues": "my-authentication-server-issues.com",
-    "Audience": "my-authentication-server-audience.com"
+    "Issues": "https://localhost:7229",
+    "Audience": "https://localhost:7229"
   },
   "Encryption": {
     "key": "RcH5J7cUTm2uIWTxkkNUtPoP3SEPrdXd"
+  },
+  "ConnectionStrings": {
+    "PSQL": "Host=localhost;Port=5432;Database=company_management;Username=admin;Password=TEST001;Maximum Pool Size=1000;"
   }
 }
