--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7229;http://localhost:5129"
+      "applicationUrl": "https://localhost:7229"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
